syntax = "proto3";

package todo;

// The Todo item message
message Todo {
  string id = 1;
  string title = 2;
  bool completed = 3;
}

// Request and Response messages for individual operations
message CreateTodoRequest {
  string title = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
  bool completed = 3;
}

message TodoId {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
}

// The service definition with all CRUD-like methods.
service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (Todo);
  rpc ReadTodo (TodoId) returns (Todo);
  rpc UpdateTodo (UpdateTodoRequest) returns (Todo);
  rpc DeleteTodo (TodoId) returns (DeleteResponse);
  rpc ListTodos (Empty) returns (TodoList);
}

// A simple message for no input or empty responses
message Empty {}

// A message to hold a list of todos
message TodoList {
  repeated Todo todos = 1;
}

// A dedicated service for server health checks
service HealthService {
  rpc Healthz (Empty) returns (HealthCheckResponse);
}

// Response for the health check endpoint
message HealthCheckResponse {
  string status = 1;
}